# 3dyne_extlibs

./: CMakeLists.txt
SDL-1.2.15/: CMakeLists.txt
SDL-1.2.15/include/: SDL_config_win32.h
